pkg/operator/controllers/guardrails/policies/gktemplates/aro-deny-delete.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: arodenydelete
  annotations:
    description: >-
      Prevents unexpected deletion of a specific critical resource
spec:
  crd:
    spec:
      names:
        kind: ARODenyDelete
      validation:
        openAPIV3Schema:
          type: object
          properties:
            name:
              type: string
              description: >-
                The specific resource name that is not allowed to be deleted.
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package arodenydelete

        violation[{"msg": msg}] {
          input.review.operation == "DELETE"
          deny_resource_name := input.parameters.name
          deny_resource_name == input.review.object.metadata.name
          msg := sprintf("Deleting resource - %v is not allowed", [deny_resource_name])
        }
